# kamera

./: .dir  .gitignore  CALIBRATION.md  CHANGELOG.md  Makefile  NOTICE  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gui-build.yml  gui-noetic-build.yml
compose/: .env  cam_ir.yml  cam_param_monitor.yml  cam_rgb.yml  cam_uv.yml  daq.yml  detections.yml  detector.yml  flight_summary.yml  fps_monitor.yml  gui.yml  homography.yml  image_manager.yml  imageview.yml  ins.yml  kamerad.yml  nodelist.yml  postproc.yml  registry.yml  roscore.yml  shapefile_monitor.yml  spoof_events.yml  sync_msg_publisher.yml
docker/: core.dockerfile  detector.dockerfile  gui.dockerfile  kamerapy.dockerfile
kamera/postflight/: colmap.py  (+15 more)
provision/: README.md
scripts/: activate_ros.bash  cfg-aliases.sh  docker_images.sh  kamera.desktop  kamera_halt.sh  kamera_run.sh  repo_dir.bash  seed_redis.py  set_exposure_compensation.sh  setup_postproc.ps1  setup_postproc.sh  spoof_events.desktop  spoof_events.sh  stop_system.sh  swap_dockerd.sh  swap_dockerd_cas.sh  swap_dockerd_nuvo.sh  system.py  turn_off_physical_shutters.sh  turn_on_physical_shutters.sh
src/backend/: CMakeLists.txt  package.xml  setup.py
src/backend/scripts/: diagnostics.py
src/cams/kw_genicam_driver/: CMakeLists.txt  package.xml
src/cams/kw_genicam_driver/config/: debug_rosconsole.conf
src/cams/kw_genicam_driver/launch/: flir_a645.launch  flir_a6750.launch  genicam_a6750.launch  genicam_a6xx.launch  gige_scan.launch
src/cams/kw_genicam_driver/scripts/: display_latency.py  run_simple_driver.sh
src/cams/kw_genicam_driver/src/: aux.cpp  aux.h  decode_error.cpp  decode_error.h  driver.cpp  driver_a6750.cpp  genicam_ctl.cpp  genicam_ctl.h  gige_scan.cpp  kw_genicam_config  macros.h  spec_a6750.cpp  spec_a6750.h  utils.cpp  utils.h
src/cams/prosilica_camera/: .gitignore  CMakeLists.txt  attributes.txt  package.xml  profiling.txt  prosilica.launch  test_homography.sh
src/cams/prosilica_camera/include/prosilica/: prosilica.h
src/cams/prosilica_camera/include/prosilica_camera/: ProsilicaCameraConfig.h
src/cams/prosilica_camera/launch/: prosilica.launch
src/cams/prosilica_camera/plugins/: nodelet_plugins.xml
src/cams/prosilica_camera/src/libprosilica/: cam_attr.cpp  cam_attr.h  prosilica.cpp
src/cams/prosilica_camera/src/nodes/: prosilica_node.cpp  prosilica_nodelet.cpp  view_server_nodelet.cpp
src/core/kamcore/: CMakeLists.txt  README.rst  package.xml  setup.py
src/core/kamcore/launch/: cam_param_monitor.launch  fps_monitor.launch  kamcore.launch  shapefile_monitor.launch
src/core/kamcore/scripts/: cam_param_monitor_node.py  diagnostics_to_influxdb.py  fps_monitor_node.py  kamcore_node.py  seed_redis_config.py  shapefile_monitor_node.py
src/core/kamcore/src/kamcore/: datatypes.py  redis_tools.py  structures.py  timeutil.py
src/core/roskv/: .gitignore  CMakeLists.txt  noros-setup.py  package.xml  setup.py  tests-py2.df
src/core/roskv/include/roskv/: archiver.h  envoy.h  roskv.h
src/core/roskv/libroskv/: archiver.cpp  envoy.cpp  roskv.cpp  test_roskv.cpp
src/core/roskv/scripts/: roskv
src/core/roskv/src/roskv/: base.py  client.py  compat.py  pigeonhole.py  reactor.py  rendezvous.py  util.py
src/core/roskv/src/roskv/impl/: consul_kv.py  consul_ros_mirror.py  nop_kv.py  redis_envoy.py  rosparam_kv.py
src/core/roskv/src/roskv/nodes/: kvtest.py  test_destructor.py
src/core/ser_daq/: CMakeLists.txt  README.rst  package.xml  setup.py
src/core/ser_daq/launch/: ser_daq.launch
src/core/ser_daq/scripts/: ser_daq_driver
src/kitware-ros-pkg/kwiver_ros_param_interface/: CMakeLists.txt  README.md  dynamic_config_ros.cxx  dynamic_config_ros.h  package.xml  register_algorithms.cxx
src/kitware-ros-pkg/kwiver_ros_param_interface/include/kwiver_ros_param_interface/: kwiver_ros_param_interface.h
src/kitware-ros-pkg/sensor_simulator/: CMakeLists.txt  README.md  package.xml  setup.py
src/kitware-ros-pkg/sensor_simulator/launch/: simulate_cameras.launch  simulate_cameras_one_sys.launch  simulate_ins.launch
src/kitware-ros-pkg/sensor_simulator/scripts/: simulate_cameras.py  simulate_ins.py
src/kitware-ros-pkg/sensor_simulator/src/sensor_simulator/: camera_simulator.py
src/kitware-ros-pkg/sprokit_adapters/: CMakeLists.txt  README.md  package.xml
src/kitware-ros-pkg/sprokit_adapters/config/: debug_rosconsole.conf
src/kitware-ros-pkg/sprokit_adapters/launch/: publish_sync_msgs.launch  sprokit_detector_fusion_adapter.launch
src/kitware-ros-pkg/sprokit_adapters/nbproject/: configurations.xml  project.xml
src/kitware-ros-pkg/sprokit_adapters/nbproject/private/: configurations.xml
src/kitware-ros-pkg/sprokit_adapters/pipelines/VIAME-JoBBS-Models-v2021.01.20/configs/pipelines/: detector_eo_polar_bear_yolo.pipe  detector_ir_yolo.pipe
src/kitware-ros-pkg/sprokit_adapters/pipelines/VIAME-JoBBS-Models-v2021.01.20/configs/pipelines/embedded_dual_stream/: JoBBS_eo_polar_bear_yolo_detector.pipe  JoBBS_ir_hotspot_yolo_detector.pipe  JoBBS_pb_seal_yolo_ir_eo_region_tigger.pipe
src/kitware-ros-pkg/sprokit_adapters/pipelines/embedded_dual_stream/: arctic_seal_tf_eo_only.pipe  arctic_seal_tf_ir_only.pipe  arctic_seal_tf_ir_to_eo_frame_trigger.pipe  arctic_seal_tiny_yolo_eo_only.pipe  arctic_seal_yolo_ir_only.pipe  arctic_seal_yolo_ir_to_eo_frame_trigger.pipe  arctic_seal_yolo_ir_to_eo_region_trigger.pipe  arctic_seal_yolo_ir_to_tiny_eo_region_tigger.pipe
src/kitware-ros-pkg/sprokit_adapters/scripts/: publish_sync_msgs.py  rebroadcast_infrequent_detections.py  save_detection_chips_to_disk.py  save_images_to_disk.py
src/kitware-ros-pkg/sprokit_adapters/src/: kw_detector_fusion_adapter.cpp  ros_detector_scaling.cxx  ros_detector_scaling.h  ros_dynamic_config.cxx  ros_dynamic_config.h
src/process/view_server/: CMakeLists.txt  package.xml  setup.py
src/process/view_server/launch/: image_view_server.launch  web_server.launch
src/process/view_server/src/view_server/: image_view_server.py  image_view_server.py.bak  img_nexus.py  web_server_node.py
(+658 files in other folders)
