[project]
name = "kamera"
version = "0.1.0"
description = "KAMERA: Kitware's Image Acquisition ManagER and Archiver"
authors = [
    { name = "Adam Romlein", email = "adam.romlein@kitware.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "pyyaml>=6.0.2",
    "datetime>=5.5",
    "exifread>=3.0.0",
    "pygeodesy>=24.9.29",
    "pyshp>=2.3.1",
    "simplekml>=1.3.6",
    "shapely>=2.0.6",
    "transformations>=2024.5.24",
    "scriptconfig>=0.8.0",
    "ubelt>=1.3.6",
    "rich>=13.9.1",
]

# GDAL is intentionally not a dependency: there are no reliable
# cross-platform wheels. It comes from conda-forge (environment.yml), and the
# uv venv is built on top of the conda env with --system-site-packages so the
# conda GDAL is importable (see `make install` and the README).

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

[tool.uv]
# Never let uv substitute its own managed python: .venv must be built on the
# active conda env's interpreter or --system-site-packages won't see the
# conda GDAL.
python-preference = "only-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kamera"]
