[project]
name = "kamera"
version = "0.1.0"
description = "KAMERA: Kitware's Image Acquisition ManagER and Archiver"
authors = [
    { name = "Adam Romlein", email = "adam.romlein@kitware.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "pyyaml>=6.0.2",
    "datetime>=5.5",
    "exifread>=3.0.0",
    "pygeodesy>=24.9.29",
    "pyshp>=2.3.1",
    "simplekml>=1.3.6",
    "shapely>=2.0.6",
    "transformations>=2024.5.24",
    "scriptconfig>=0.8.0",
    "ubelt>=1.3.6",
    "rich>=13.9.1",
    "bottle>=0.13.2",
]

# GDAL and pycolmap have no reliable cross-platform wheels (the pip pycolmap
# wheel's bundled libomp collides with conda's OpenMP runtime on macOS); both
# come from conda-forge (environment.yml) and reach .venv via
# --system-site-packages. pycolmap 4.x tracks COLMAP 3.14.

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest>=8.0",
]
# Cross-modal (EO<->IR) deep matching for calibrate_rig.py --fuse. vismatch
# wraps MINIMA-LoFTR and auto-downloads its weights on first use; it pulls in
# torch, so it is opt-in:  uv sync --group fusion
fusion = [
    "vismatch>=1.2.1",
    # MINIMA's vendored LoFTR imports kornia.utils.grid, removed in kornia 0.8.
    "kornia>=0.7.3,<0.8",
]

[tool.uv]
# Build .venv on the conda python, never a uv-managed one, so
# --system-site-packages sees the conda GDAL.
python-preference = "only-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kamera"]
