[project]
name = "kamera"
version = "0.1.0"
description = "KAMERA: Kitware's Image Acquisition ManagER and Archiver"
authors = [
    { name = "Adam Romlein", email = "adam.romlein@kitware.com" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.1",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pillow>=10.4.0",
    "pyyaml>=6.0.2",
    "datetime>=5.5",
    "exifread>=3.0.0",
    "pygeodesy>=24.9.29",
    "pyshp>=2.3.1",
    "simplekml>=1.3.6",
    "shapely>=2.0.6",
    "transformations>=2024.5.24",
    "scriptconfig>=0.8.0",
    "ubelt>=1.3.6",
    "rich>=13.9.1",
]

# GDAL has no reliable cross-platform wheels; it comes from conda-forge
# (environment.yml) and reaches .venv via --system-site-packages.

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

[tool.uv]
# Build .venv on the conda python, never a uv-managed one, so
# --system-site-packages sees the conda GDAL.
python-preference = "only-system"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kamera"]
