<?xml version="1.0"?>
<package format="2">
  <name>backend</name>
  <version>0.5.0</version>
  <description>
    High level package to install all the backend dependencies
  </description>

  <maintainer email="adam.romlein@kitware.com">Adam Romlein</maintainer>
  <license>Apache 2.0</license>



  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>roslint</build_depend>-->
  <exec_depend>rospy</exec_depend>
  <exec_depend>kamcore</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>kamerahealth</exec_depend>
  <exec_depend>roskv</exec_depend>
  <exec_depend>phase_one</exec_depend>
  <exec_depend>prosilica_camera</exec_depend>
  <exec_depend>kw_genicam_driver</exec_depend>
  <exec_depend>ins_driver</exec_depend>
  <exec_depend>mcc_daq</exec_depend>
  <exec_depend>nexus</exec_depend>
  <exec_depend>sysinfo</exec_depend>
  <exec_depend>view_server</exec_depend>
  <exec_depend>wxpython_gui</exec_depend>


  <!--<test_depend>roslint</test_depend>-->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- This is a pure Python package, so mark it architecture independent -->
    <architecture_independent/>
  </export>
</package>
