<?xml version="1.0"?>
<package format="2">
  <name>kamcore</name>
  <version>0.1.0</version>
  <description>
    Common library for KAMERA nodes
  </description>

  <maintainer email="adam.romlein@kitware.com">Adam Romlein</maintainer>
  <author email="michael.mcdermott@kitware.com">Michael McDermott</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>



  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>roslint</build_depend>-->
  <exec_depend>rospy</exec_depend>
  <exec_depend>custom_msgs</exec_depend>

  <!--<test_depend>roslint</test_depend>-->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- This is a pure Python package, so mark it architecture independent -->
    <architecture_independent/>
  </export>
</package>
