<?xml version="1.0"?>
<package format="2">
  <name>ser_daq</name>
  <version>0.5.0</version>
  <description>
    Drives I/O via serial port
  </description>

  <maintainer email="adam.romlein@kitware.com">Adam Romlein</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>

  <author email="michael.mcdermott@kitware.com">Michael McDermott</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>roslint</build_depend>-->
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>custom_msgs</exec_depend>

  <!--<test_depend>roslint</test_depend>-->
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- This is a pure Python package, so mark it architecture independent -->
    <architecture_independent/>
  </export>
</package>
